# oz_django_7

./: pyproject.toml  temp.py
.github/workflows/: ci.yml
oz_django_7/: settings.py
tabom/: models.py
tabom/migrations/: 0001_initial.py  0002_like_unique_user_article.py
tabom/tests/: test_like_service.py
